# p4c

./: .gitmodules  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-p4tools.yml  ci-static-build-test.yml  ci-test.yml  ci-validation.yml
backends/bmv2/: pseudo.py  run-bmv2-protobuf-test.py
backends/ebpf/: CMakeLists.txt  README.md  build_libbpf  codeGen.cpp  codeGen.h  ebpfControl.cpp  ebpfControl.h  ebpfParser.cpp  ebpfProgram.cpp  ebpfProgram.h  ebpfTable.cpp  ebpfType.cpp  ebpfType.h
backends/ebpf/runtime/: ebpf_common.h  ebpf_kernel.h  ebpf_runtime_test.h  ebpf_test.h  runtime.mk
backends/ebpf/targets/: ebpfenv.py  ebpfstf.py
backends/p4tools/: BUILD.bazel  p4tools.def
backends/p4tools/cmake/: Z3.cmake
backends/p4tools/common/: options.h  p4ctool.h
backends/p4tools/common/compiler/: compiler_target.cpp  compiler_target.h  reachability.cpp  reachability.h
backends/p4tools/common/control_plane/: CMakeLists.txt
backends/p4tools/common/core/: z3_solver.cpp  z3_solver.h
backends/p4tools/common/lib/: model.h  table_utils.h  util.h
backends/p4tools/modules/emi/: CMakeLists.txt  emi.cpp  emi.h  main.cpp  register.h.in  version.h.cmake
backends/p4tools/modules/emi/targets/tofino/: CMakeLists.txt
backends/p4tools/modules/mutate/: CMakeLists.txt  main.cpp  mutate.cpp  mutate.h  options.cpp  options.h  register.h.in  version.h.cmake
backends/p4tools/modules/mutate/parser/: parser.py
backends/p4tools/modules/mutate/passes/: insertDeadCode.cpp  insertDeadCode.h  insertLiveCode.cpp  insertLiveCode.h  insertParserStates.cpp  insertParserStates.h  reorderExpressionTerms.cpp  reorderExpressionTerms.h  reorderParserStates.cpp  reorderParserStates.h  reorderStatements.cpp  reorderStatements.h  switchTableDecls.cpp  switchTableDecls.h
backends/p4tools/modules/mutate/targets/tofino/: CMakeLists.txt  register.h  tofino.cpp  tofino.h
backends/p4tools/modules/mutate/util/: config.h  util.cpp  util.h
backends/p4tools/modules/smith/: CMakeLists.txt  main.cpp  options.cpp  options.h  smith.cpp  smith.h
backends/p4tools/modules/smith/backends/: psa.cpp  tna.cpp  top.cpp  v1model.cpp
backends/p4tools/modules/smith/common/: actionDeclaration.cpp  actionDeclaration.h  actionList.cpp  actionList.h  assignmentOrMethodCallStatement.cpp  assignmentOrMethodCallStatement.h  baseType.cpp  baseType.h  blockStatement.cpp  blockStatement.h  conditionalStatement.cpp  conditionalStatement.h  constantDeclaration.cpp  constantDeclaration.h  controlDeclaration.cpp  controlDeclaration.h  derivedTypeDeclaration.cpp  derivedTypeDeclaration.h  enumDeclaration.cpp  enumDeclaration.h  exitStatement.h  expression_bit.cpp  expression_boolean.cpp  expression_int.cpp  externDeclaration.cpp  externDeclaration.h  functionDeclaration.cpp  functionDeclaration.h  headerStackType.cpp  headerStackType.h  headerTypeDeclaration.cpp  headerTypeDeclaration.h  headerUnionDeclaration.cpp  headerUnionDeclaration.h  identifierList.cpp  identifierList.h  keyElement.cpp  keyElement.h  keyElementList.cpp  keyElementList.h  (+35 more)
backends/p4tools/modules/smith/core/: target.h
backends/p4tools/modules/smith/targets/tofino/: CMakeLists.txt  register.h  registerActionDeclaration.cpp  registerActionDeclaration.h  target.cpp  target.h  tofino.cpp  tofino.h
backends/p4tools/modules/smith/test/: config.py  run_smith_tests.py  runner.py
backends/p4tools/modules/smith/util/: wordlist.cpp  wordlist.h
backends/p4tools/modules/testgen/: CMakeLists.txt
backends/p4tools/modules/testgen/core/small_step/: cmd_stepper.cpp  cmd_stepper.h  table_stepper.cpp  table_stepper.h
backends/p4tools/modules/testgen/lib/: collect_coverable_statements.cpp
backends/p4tools/modules/testgen/targets/bmv2/backend/ptf/: ptf.cpp
backends/p4tools/modules/testgen/targets/bmv2/test/: TestTemplate.cmake  gtest_utils.cpp  gtest_utils.h
backends/p4tools/modules/testgen/targets/bmv2/test/small-step/: p4_asserts_parser_test.cpp  reachability.cpp
backends/p4tools/modules/testgen/targets/bmv2/test/testgen_api/: api_test.cpp  benchmark.cpp  control_plane_filter_test.cpp  output_option_test.cpp
backends/p4tools/modules/testgen/test/: gtest_utils.cpp  gtest_utils.h
backends/p4tools/modules/testgen/test/z3-solver/: accessor.h
control-plane/: p4RuntimeArchStandard.h
frontends/common/: constantFolding.cpp  parser_options.cpp  parser_options.h
frontends/p4/: callGraph.h  defaultValues.cpp  inlining.cpp  sideEffects.cpp
frontends/p4-14/: ir-v1.def
frontends/p4/toP4/: toP4.cpp  toP4.h
ir/: base.def  expression.def  id.h  irutils.cpp  irutils.h  node.h  type.def  vector.h
p4include/bmv2/: pna.p4
temp/: switchlog.txt  ternary2-bmv2.json
test/: CMakeLists.txt
test/gtest/: semantically_less_test.cpp
testdata/p4_16_samples/: issue870_ebpf.p4  test_ebpf.p4  test_ebpf.stf
tools/: ci-build.sh  testutils.py
tools/ir-generator/: irclass.cpp  methods.cpp
